--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -4,6 +4,10 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 <style type="text/css">
 <!--
+		html {
+ border: 8px solid #FFFC33;!important
+ min-height: 100%;
+}
 .Estilo4 {
 	color: yellow;
 	font-size: 24px;
@@ -21,7 +25,7 @@ background: -o-linear-gradient(287deg, rgb(1, 61, 173) 0%, rgb(0, 40, 154) 100%)
 background: -ms-linear-gradient(287deg, rgb(1, 61, 173) 0%, rgb(0, 40, 154) 100%);
 background: -moz-linear-gradient(287deg, rgb(1, 61, 173) 0%, rgb(0, 40, 154) 100%);
 background: linear-gradient(163deg, rgb(1, 61, 173) 0%, rgb(0, 40, 154) 100%);
-background-color: #0054c4;
+background-color: black;
 background-position:absolute;
 color: white;
 text-align: center;
