--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -34,7 +34,7 @@ text-align: center;
 color: white;
 }
 .btn {
-background-color: #003263;
+background-color: black;
 color: white;
 width: 260px;
 height: 249px;
@@ -54,19 +54,19 @@ cursor: pointer;
 border-radius: 8px;
 }
 .btn:hover {
-background-color: #0058b1;
+background-color: #ecd764;
 }
 .btn-web {
-background-color: #076300;
+background-color: #ecd764;
 }
 .btn-web:hover {
-background-color: #18891b;
+background-color: #ecd764;
 }
 .btn-toolbox {
-background-color: #ae2301;
+background-color: #ecd764;
 }
 .btn-toolbox:hover {
-background-color: #d42a01;
+background-color: #ecd764;
 }
 </style><style>
 img[alt="www.000webhost.com"]{display:none;}.Estilo1 {font-size: 18px}
