--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -123,7 +123,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <button class="btn" onclick=load_exitidu()> <span class="btn13"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-idu-exit.png" width="199" height="199"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Exit IDU</p> </button>
 <button class="btn" onclick=load_rifRen()> <span class="btn14"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-rif-renamer.png" width="199" height="199"></span><br>
-<p style="border: 1px solid #FCFF33;  background-color:#000000;"> RIF Rename</p>r </button>
+<p style="border: 1px solid #FCFF33;  background-color:#000000;"> RIF Rename</p> </button>
 <button class="btn" onclick=load_permUart()> <span class="btn15"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-uart.png" width="199" height="199"></span><p style="border: 1px solid #FCFF33;  background-color:#000000;"> Permanent UART</p> </button>
 <br>
 <button class="btn" onclick=load_webrte() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-webrte.png" width="199" height="199"></span><p style="border: 1px solid #FCFF33;  background-color:#000000;"> WebRTE</p> </button>
