--- a/PS4/900/payload2.html
+++ b/PS4/900/payload2.html
@@ -6,11 +6,17 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'><link rel="stylesheet" href="./style.css">
-
+<script src="int64.js"></script>
+<script src="rop.js"></script>
+<script src="kexploit.js"></script>
+<script src="webkit.js"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<main class="site-wrapper">
+<main class="site-wrapper"><script>
+function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));window.msgs.innerHTML="Installing Offline Cache: " + Percent + "%";}
+function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cache Installed Successfully ✔";},1000);setTimeout(function(){window.msgs.innerHTML="Now Close And Re-Open Your Browser ...";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
+</script>
   <div class="pt-table desktop-768">
     <div class="pt-tablecell page-home relative" style="background-image: url(https://images.unsplash.com/photo-1486870591958-9b9d0d1dda99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
     background-position: center;
@@ -40,14 +46,14 @@
                                         </div>
                                         <a  class="hex-content">
                                             <span class="hex-content-inner">
-                                                <span class="icon">
+                                                <button class="btn" onclick=load_ftp()><span class="icon">
                                                     <i class="fa fa-universal-access"></i>
                                                 </span>
                                                 <span class="title">Welcome</span>
                                             </span>
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
-                                    </div>
+                                    </div></button>
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
@@ -181,7 +187,203 @@
                 </div>
             </div>
   </main>
-<!-- partial -->
+<!-- partial --><script>
+for(var i=40; i<=79; i++){
+    var select = document.getElementById("tempC");
+    var option = document.createElement("OPTION");
+	select.options.add(option);
+	option.text = i;
+	option.value = i;
+}
+tempC.value=60;
+</script>
+<script>
+function allset(){
+setTimeout(location.reload,1000);
+alert("Payload Loaded... You will get a Memory Error, Press OK after that");
+msgs.innerHTML= LoadedMSG;
+}
+
+function awaitpl(){
+setTimeout(location.reload,1000);
+alert("Jailbreak Loaded... Now Send a Payload using the PS4 IP and port 9020");
+msgs.innerHTML="Wait a Moment...";
+}
+
+function load_goldhen2b(){
+var script = document.createElement('script');script.src = "goldhen_2.0b.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + GoldHEN v2.0b... Please Wait !!!";
+LoadedMSG="GoldHEN v2.0b Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_goldhen2b2(){
+var script = document.createElement('script');script.src = "goldhen_2.0b2.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + GoldHEN v2.0b2... Please Wait !!!";
+LoadedMSG="GoldHEN v2.0b2 Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_binloader(){
+msgs.innerHTML="Loading Jailbreak + Bin Loader... Please Wait !!!";
+run_jb = "binloader";
+setTimeout(poc,1500);
+}
+
+function load_todex(){
+var script = document.createElement('script');script.src = "todex.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + ToDex... Please Wait !!!"
+LoadedMSG="ToDex Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_dumper(){
+var script = document.createElement('script');script.src = "dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Game Dumper... Please Wait !!!"
+LoadedMSG="Game Dumper Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_ftp(){
+var script = document.createElement('script');script.src = "ftp.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + FTP... Please Wait !!!"
+LoadedMSG="FTP Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_app2usb(){
+var script = document.createElement('script');script.src = "app2usb.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + App2USB... Please Wait !!!"
+LoadedMSG="App2USB Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_dbackup(){
+var script = document.createElement('script');script.src = "backup.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + DB Backup... Please Wait !!!"
+LoadedMSG="DB Backup Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_dbrestore(){
+var script = document.createElement('script');script.src = "restore.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + DB Restore... Please Wait !!!"
+LoadedMSG="DB Restore Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_enablebUpdates(){
+var script = document.createElement('script');script.src = "enable-updates.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Enable Updates... Please Wait !!!"
+LoadedMSG="Enable Updates Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_disableUpdates(){
+var script = document.createElement('script');script.src = "disable-updates.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Disable Updates... Please Wait !!!"
+LoadedMSG="Disable Updates Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_historyBlocker(){
+var script = document.createElement('script');script.src = "history-blocker.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + History Blocker... Please Wait !!!"
+LoadedMSG="History Blocker Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_kernelDump(){
+var script = document.createElement('script');script.src = "kernel-dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Kernel Dumper... Please Wait !!!"
+LoadedMSG="Kernel Dumper Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_moduleDump(){
+var script = document.createElement('script');script.src = "module-dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Module Dumper... Please Wait !!!"
+LoadedMSG="Module Dumper Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_ps4debug(){
+var script = document.createElement('script');script.src = "ps4debug.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + PS4 Debug... Please Wait !!!"
+LoadedMSG="PS4 Debug Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_disbAslr(){
+var script = document.createElement('script');script.src = "disable-aslr.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Disable ASLR... Please Wait !!!"
+LoadedMSG="Disable ASLR Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_exitidu(){
+var script = document.createElement('script');script.src = "exit-idu.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Exit IDU... Please Wait !!!"
+LoadedMSG="Exit IDU Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_rifRen(){
+var script = document.createElement('script');script.src = "rif-renamer.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + RIF Renamer... Please Wait !!!"
+LoadedMSG="RIF Renamer Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_permUart(){
+var script = document.createElement('script');script.src = "permanent-uart.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Permanent UART... Please Wait !!!"
+LoadedMSG="Permanent UART Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_webrte(){
+var script = document.createElement('script');script.src = "webrte.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + WebRTE... Please Wait !!!"
+LoadedMSG="WebRTE Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_fanthreshold(){
+var script = document.createElement('script');script.src = "fan-threshold.js";localStorage.setItem('fanthreshold', tempC.value);document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Fan Threshold... Please Wait !!!"
+LoadedMSG="Fan Threshold Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+
+function load_toolbox(){
+var script = document.createElement('script');script.src = "orbis-toolbox.js";document.getElementsByTagName('head')[0].appendChild(script);
+msgs.innerHTML="Loading Jailbreak + Orbis-Toolbox... Please Wait !!!"
+LoadedMSG="Orbis-Toolbox Loaded...";
+run_jb = "payload";
+setTimeout(poc,1500);
+}
+</script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
 </html>
