--- a/PS4/900/payload2.html
+++ b/PS4/900/payload2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html manifest="cache.manifest">
 <head>
   <meta charset="UTF-8">
   <title>CodePen - menu with awesome hover </title>
