--- a/PS4/900/payload2.html
+++ b/PS4/900/payload2.html
@@ -6,6 +6,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'><link rel="stylesheet" href="./style.css">
+
 <script src="int64.js"></script>
 <script src="rop.js"></script>
 <script src="kexploit.js"></script>
@@ -46,14 +47,14 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
                                         </div>
                                         <a  class="hex-content">
                                             <span class="hex-content-inner">
-                                                <button class="btn" onclick=load_ftp()><span class="icon">
-                                                    <i class="fa fa-universal-access"></i>
+                                                
+                                                    <button class="btn" onclick=load_ftp()><span class="icon"><i class="fa fa-universal-access"></i></button>
                                                 </span>
                                                 <span class="title">Welcome</span>
                                             </span>
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
-                                    </div></button>
+                                    </div>
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
