--- a/PS4/900/payload2.html
+++ b/PS4/900/payload2.html
@@ -47,12 +47,12 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
                                             <div></div>
                                         </div>
                                         <a  class="hex-content">
-                                            <span class="hex-content-inner">
+                                            <span class="hex-content-inner"onclick=load_ftp()>
                                                 
-                                                    <button class="btn" onclick=load_ftp()><span class="icon"><i class="fa fa-universal-access"></i>
+                                                    <span class="icon"><i class="fa fa-universal-access"></i>
                                                 </span>
                                                 <span class="title">Welcome</span>
-                                            </span></button>
+                                            </span>
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
                                     </div>
