--- a/PS4/900/payload2.html
+++ b/PS4/900/payload2.html
@@ -20,7 +20,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <!-- partial:index.partial.html -->
 <main class="site-wrapper">
   <div class="pt-table desktop-768">
-    <div class="pt-tablecell page-home relative" style="background-image: url(https://images.unsplash.com/photo-1486870591958-9b9d0d1dda99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
+    <div class="pt-tablecell page-home relative" style="background-color:#000000;
     background-position: center;
     background-size: cover;">
                     <div class="overlay"></div>
@@ -49,7 +49,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
                                         <a  class="hex-content">
                                             <span class="hex-content-inner"onclick=load_ftp()>
                                                 
-                                                    <span class="icon"><i class="fa fa-universal-access"></i>
+                                                    <span class="><i class="fa fa-universal-access"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-ftp.png" width="99" height="99"></i>
                                                 </span>
                                                 <span class="title">Welcome</span>
                                             </span>
