--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -83,6 +83,7 @@ img[alt="www.000webhost.com"]{display:none;}.Estilo1 {font-size: 18px}
 <script src="int64.js"></script>
 <script src="rop.js"></script>
 <script src="kexploit.js"></script>
+<script src="exploit.js"></script>
 <script src="webkit.js"></script>
 </head>
 <body>
@@ -103,7 +104,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
   </g>
   </svg><br>Activando Webkit Xploit, Espere por favor ... ㋡</div>
 <script>
-if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
+if (window.applicationCache.status=='0'){window.location.replace("/jailbreak/PS4/900/cache.html");}
 </script>
 <br>
 <button class="btn" onclick=load_binloader()> <span class="btn3"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-binloader.png" width="199" height="199"></span><br>
