--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -100,7 +100,9 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <a href="https://ps4xploit900.github.io/goldhen/212/index.html"><button class="btn" > <span class="btn3"><img src="https://ps4xploit900.github.io/jailbreak/img/HenEnable.png" width="199" height="199" border="0"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.1.2</p> </button></a>
 <a href="https://ps4xploit900.github.io/goldhen/2B2/index.html"><button class="btn" > <span class="btn3"><img src="https://ps4xploit900.github.io/jailbreak/img/HenEnable.png" width="199" height="199" border="0"></span><br>
-<p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2b2</p> </button></a>
+<p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.0b2</p> </button></a>
+<a href="https://ps4xploit900.github.io/goldhen/2B0/index.html"><button class="btn" > <span class="btn3"><img src="https://ps4xploit900.github.io/jailbreak/img/HenEnable.png" width="199" height="199" border="0"></span><br>
+<p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.0b</p> </button></a>
 <button class="btn" onclick=load_binloader()> <span class="btn3"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-binloader.png" width="199" height="199"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">Bin Loader</p> </button>
 <br>
