--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -42,7 +42,7 @@ padding-bottom: 5px;
 text-align: center;
 font-size: 20px;
 margin-top: 8px;
-margin-bottom: 8px;
+margin-bottom: 48px;
 margin-left: 8px;
 margin-right: 8px;
 border-bottom-width: 0px;
@@ -79,6 +79,10 @@ img[alt="www.000webhost.com"]{display:none;}.Estilo1 {font-size: 18px}
 	color: yellow;
 	text-align: center;
 }
+p { font-size:15px;
+	text-align: center;
+}
+.Estilo10 {font-size: 12px}
 </style>
 <script src="int64.js"></script>
 <script src="rop.js"></script>
@@ -142,7 +146,8 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <button class="btn" onclick=load_rifRen()> <span class="btn14"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-rif-renamer.png" width="128" height="128"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> RIF Rename</p> </button>
 <button class="btn" onclick=load_permUart()> <span class="btn15"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-uart.png" width="128" height="128"></span>
-<p style="border: 1px solid #FCFF33;  background-color:#000000;"> Permanent UART</p> </button>
+<p class="Estilo10" style="border: 1px solid #FCFF33;  background-color:#000000;"> Permanent UART</p> 
+</button>
 <br>
 <button class="btn" onclick=load_webrte() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-webrte.png" width="128" height="128"></span>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> WebRTE</p> </button>
