--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -149,7 +149,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <button class="btn" onclick=load_permUart()> <span class="btn15"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-uart.png" width="69" height="69"></span>
 <p class="Estilo10" style="border: 1px solid #FCFF33;  background-color:#000000;"> Permanent UART</p> 
 </button>
-<button class="btn" onclick=load_PKGBackup() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-gamedumper.png" width="69" height="69"></span>
+<button class="btn" onclick=load_PKGBackup.js() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-gamedumper.png" width="69" height="69"></span>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;">PKG Backup</p> </button>
 <button class="btn" onclick=load_webrte() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-webrte.png" width="69" height="69"></span>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> WebRTE</p> </button>
