--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -169,7 +169,7 @@ tempC.value=60;
 <script>
 function allset(){
 setTimeout(location.reload,1000);
-alert("✔️​Payload Cargado! 🎮​ Pulsa aceptar si finalizó el proceso...");
+alert("✅​​Payload Cargado! 🎮​ Pulsa aceptar si finalizó el proceso...");
 msgs.innerHTML= LoadedMSG;
 }
 
