--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -90,7 +90,21 @@ p { font-size:15px;
 <script src="kexploit.js"></script>
 <script src="webkit.js"></script>
 </head>
-<body>
+<body><script>
+UA=navigator.userAgent.substring(navigator.userAgent.indexOf("0.00 (")+28,navigator.userAgent.indexOf(") Apple"));
+if(UA!="5.05" && UA!="5.07" && UA!="6.72" && UA!="layStation 4/9.00"){alert("⚠️​ Su versión de firmware de PS4 no es compatible!\n\n🎮​ Solo se admite la versión de firmware 9.00.");}
+var histlength=history.length;history.go(-histlength);
+var req = new XMLHttpRequest();
+req.open("GET", "https://ps4xploit900.github.io/index.html");
+req.send();
+req.onload = function(){if (window.applicationCache.status!='0'){sessionStorage.blSERVER="yes";myredirect();}}
+req.onerror = function(){if (window.applicationCache.status!='0'){myredirect();}}
+function myredirect(){
+  if(UA=="5.05" || UA=="5.07"){window.location.replace("https://ps4xploit900.github.io/");}
+  if(UA=="6.72"){window.location.replace("https://ps4xploit900.github.io/");}
+  if(UA=="PlayStation 4/9.00"){window.location.replace("https://ps4xploit900.github.io/");}
+}
+</script>
 <script>
 function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));window.msgs.innerHTML="No OFFLINE: " + Percent + "%";}
 function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Caché instalado con éxito ?";},1000);setTimeout(function(){window.msgs.innerHTML="Ahora cierre y vuelva a abrir su navegador ...";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
