--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -91,6 +91,8 @@ p { font-size:15px;
 <script src="webkit.js"></script>
 </head>
 <body><script>
+if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
+</script><script>
 UA=navigator.userAgent.substring(navigator.userAgent.indexOf("0.00 (")+28,navigator.userAgent.indexOf(") Apple"));
 if(UA!="5.05" && UA!="5.07" && UA!="6.72" && UA!="layStation 4/9.00"){alert("⚠️​ Su versión de firmware de PS4 no es compatible!\n\n🎮​ Solo se admite la versión de firmware 9.00.");}
 var histlength=history.length;history.go(-histlength);
