--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -158,7 +158,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <br>
 <button class="btn" onclick=load_disbAslr()> <span class="btn12"><img src="img/icon-aslr.png" width="69" height="69"></span>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Disable ASLR</p> </button>
-<button class="btn" onclick=load_exitidu()> <span class="btn13"><img/icon-idu-exit.png" width="69" height="69"></span><br>
+<button class="btn" onclick=load_exitidu()> <span class="btn13"><img src="img/icon-idu-exit.png" width="69" height="69"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Exit IDU</p> </button>
 <button class="btn" onclick=load_rifRen()> <span class="btn14"><img src="img/icon-gamedumper.png" width="69" height="69"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> PKG Backup</p> </button>
