--- a/PS4/900/index.html
+++ b/PS4/900/index.html
@@ -124,6 +124,8 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.0b2</p> </button></a>
 <a href="https://ps4xploit900.github.io/goldhen/2B0/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.0b</p> </button></a>
+<a href="https://ps4xploit900.github.io/jailbreak/silverhen/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
+<p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">SilverHEN v0.1</p> </button></a>
 <button class="btn" onclick=load_binloader()> <span class="btn3"><img src="img/icon-binloader.png" width="69" height="69"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">Bin Loader</p> </button>
 <br>
