--- a/PS4/900/payload.html
+++ b/PS4/900/payload.html
@@ -97,7 +97,7 @@ p { font-size:15px;
 if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 </script><script>
 UA=navigator.userAgent.substring(navigator.userAgent.indexOf("0.00 (")+28,navigator.userAgent.indexOf(") Apple"));
-if(UA!="5.05" && UA!="5.07" && UA!="6.72" && UA!="layStation 4/9.00"){alert("⚠️​ Su versión de firmware de PS4 no es compatible!\n\n🎮​ Solo se admite la versión de firmware 9.00.");}
+if(UA!="5.05" && UA!="5.07" && UA!="6.72" && UA!="layStation 4/9.00"){alert("⚠️​ Your PS4 firmware version is not supported!\n\n🎮​ Only firmware version 9.00 is supported.");}
 var histlength=history.length;history.go(-histlength);
 var req = new XMLHttpRequest();
 req.open("GET", "https://ps4xploit900.github.io/index.html");
