--- a/ES/PS4/900/payload.html
+++ b/ES/PS4/900/payload.html
@@ -119,7 +119,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 </div> 
 <br><a href="https://ps4xploit900.github.io/goldhen/ES/224/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.2.4</p> </button></a>
-<a href="https://ps4xploit900.github.io/goldhen/ES/ES/222/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
+<a href="https://ps4xploit900.github.io/goldhen/ES/222/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.2.2</p> </button></a>
 <a href="https://ps4xploit900.github.io/goldhen/ES/212/index.html"><button class="btn" > <span class="btn3"><img src="img/HenEnable.png" width="69" height="69" border="0"></span><br>
 <p style="border: 1px solid #FCFF33; padding-bottom:2px;  background-color:#000000;">GoldHEN v2.1.2</p> </button></a>
